--- a/front-end/src/app/core/column-list/column-list.component.html
+++ b/front-end/src/app/core/column-list/column-list.component.html
@@ -58,7 +58,7 @@
     </nav>
 <div>
     <div cdkDropList cdkDropListGroup cdkDropListOrientation="horizontal" class="my-board" (cdkDropListDropped)="dropColumn($event)">
-        <div class="mt-3 ml-4 shadow p-2 mb-2" *ngFor="let column of columns" cdkDrag>
+        <div class="mt-3 ml-4 shadow p-2 mb-2 example-box" *ngFor="let column of columns" cdkDrag>
             <div class="title">
                 <h2>{{ column.column.name }}</h2>
             </div>
