--- a/front-end/src/app/core/column-list/column-list.component.html
+++ b/front-end/src/app/core/column-list/column-list.component.html
@@ -53,6 +53,7 @@
                     <mat-menu #animals="matMenu">
                         <a (click)="getInfo()" mat-menu-item>Hồ sơ cá nhân</a>
                         <a (click)="logOut()" mat-menu-item>Đăng xuất </a>
+
                     </mat-menu>
         </div>
     </nav>
@@ -66,10 +67,21 @@
             <div cdkDropList [cdkDropListData]="column.tasks" class="my-column" (cdkDropListDropped)="dropTask($event,column.column.id)">
                 <div class="my-task" *ngFor="let task of column.tasks" cdkDrag>
                     {{ task.title }}
+
+                    <button (click)="showFormAddFile()"><i class="bi bi-paperclip">
+
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-paperclip" viewBox="0 0 16 16">
+                            <path d="M4.5 3a2.5 2.5 0 0 1 5 0v9a1.5 1.5 0 0 1-3 0V5a.5.5 0 0 1 1 0v7a.5.5 0 0 0 1 0V3a1.5 1.5 0 1 0-3 0v9a2.5 2.5 0 0 0 5 0V5a.5.5 0 0 1 1 0v7a3.5 3.5 0 1 1-7 0V3z"/>
+                        </svg>
+                   </i></button>
+                    
+
+
                 </div>
+                
                 <div class="mt-2">
                   <form>
-                    <input class="form-control" type="text">
+                          <input class="form-control" type="text">
                     <button class="form-control btn btn-success mt-1">them</button>
                   </form>
                 </div>
@@ -86,6 +98,7 @@
                       </div>
                       <div>
                           <button class="form-control btn btn-outline-primary mt-2" type="submit">Thêm cột mới</button>
+
                       </div>
                   </form>
               </div>
