--- a/front-end/src/app/core/column-list/column-list.component.css
+++ b/front-end/src/app/core/column-list/column-list.component.css
@@ -22,7 +22,8 @@
     border-radius: 4px;
     overflow: auto;
     float: left;
-    background-color: rgb(241, 238, 238);
+    /* background-color: rgb(241, 238, 238); */
+    background-color: white;
 }
 
 .my-board.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
