--- a/front-end/src/app/core/column-list/column-list.component.html
+++ b/front-end/src/app/core/column-list/column-list.component.html
@@ -93,6 +93,7 @@
                         <a (click)="getInfo()" mat-menu-item>Hồ sơ cá nhân</a>
                         <a (click)="logOut()" mat-menu-item>Đăng xuất </a>
                     </mat-menu>
+      </div>
     </nav>
     <div>
         <div style="background-color: #1273ac; border: 0px; margin-top: 100px;" cdkDropList cdkDropListGroup cdkDropListOrientation="horizontal" class="my-board" (cdkDropListDropped)="dropColumn($event)">
