--- a/front-end/src/app/core/column-list/column-list.component.html
+++ b/front-end/src/app/core/column-list/column-list.component.html
@@ -105,7 +105,7 @@
                 </div>
                 <div cdkDropList [cdkDropListData]="column.tasks" class="task-list" (cdkDropListDropped)="dropTask($event,column.column.id,column.column.name)">
                     <div (click)="openCommentDialog(task.id)" style="overflow: hidden;border-radius: 3px; height: 80px; border-left: 10px solid {{ task.label }};" class="my-task mt-2 shadow p-2 mb-2" *ngFor="let task of column.tasks" cdkDrag>
-                        <div>{{ task.title }}</div>
+                        <div style="height: 40px;">{{ task.title }}</div>
                         <div class="member" style="background-image: url({{user.image}});" *ngFor="let user of task.users"
                         title="{{ user.name }} ( {{ user.email }} )"></div>
                     </div>
