--- a/front-end/src/app/login/login.component.html
+++ b/front-end/src/app/login/login.component.html
@@ -2,66 +2,86 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 
 <body>
-    <div style="text-align: center; color:#3399ff;"> <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-menu-button" viewBox="0 0 16 16">
-        <path d="M0 1.5A1.5 1.5 0 0 1 1.5 0h8A1.5 1.5 0 0 1 11 1.5v2A1.5 1.5 0 0 1 9.5 5h-8A1.5 1.5 0 0 1 0 3.5v-2zM1.5 1a.5.5 0 0 0-.5.5v2a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 .5-.5v-2a.5.5 0 0 0-.5-.5h-8z"/>
-        <path d="M7.823 2.823l-.396-.396A.25.25 0 0 1 7.604 2h.792a.25.25 0 0 1 .177.427l-.396.396a.25.25 0 0 1-.354 0zM0 8a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V8zm1 3v2a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2H1zm14-1V8a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2h14zM2 8.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0 4a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5z"/>
-    </svg> <i style="font-size: 40px;"> SevenG </i></div>
-    <br>
-    <br>
-    <div class="row justify-content-center">
-        <div class="card shadow-lg p-3 mb-5 bg-white rounded" style="width: 25rem; height: 35rem;">
-            <div class="card-body">
-                <form #login="ngForm">
-                    <p style="text-align: center; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"> <b> Đăng nhập vào SevenG </b></p>
-                    <br>
-                    <br>
-                    <div class="mb-3">
-                        <mat-form-field class="example-full-width">
-                        <input matInput [(ngModel)]="email" name="email" required email type="text"  #emails='ngModel' [class.is-invalid]="emails.invalid && emails.touched"  placeholder="Nhập email">
-                        </mat-form-field>
-                        <div *ngIf="emails.errors && (emails.valid || emails.touched)">
-                            <small class="text-danger" *ngIf="emails.errors.required">Email không được để trống</small>
-                            <small class="text-danger" *ngIf="emails.errors.email">Email phải nhập đúng định dạng</small>
-                        </div>
-                    </div>
-                    <div class="mb-3">
-                        <mat-form-field class="example-full-width">
-                            <input matInput [type]="hide ? 'password' : 'text'" placeholder="Nhập mật khẩu" [(ngModel)]="password" name="password" required pattern="[\w]+[\w]{5,}" type="password"  #pass='ngModel' [class.is-invalid]="pass.invalid && pass.touched">
-                            <a mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                            </a>
-                        </mat-form-field>
-                          <div *ngIf="pass.errors && (pass.valid || pass.touched)">
-                            <small class="text-danger" *ngIf="pass.errors.required">Mật khẩu không được để trống</small>
-                            <small class="text-danger" *ngIf="pass.errors.pattern">Mật khẩu phải hơn 6 ký tự và không được dùng ký tự đặc biệt</small>
-                        </div>
-                      </div>
-                    <div style="text-align: center;" class="mb-3">
-                        <button type="submit" class="loginButton btn btn-success " [disabled]="login.form.invalid" (click)="getToken()">Đăng nhập</button>
-                    </div>
-                    <p style="text-align: center;">Hoặc</p>
-                    <div style="text-align: center;" class="mb-3">
-                        <button class="loginButtonGoogle btn btn-outline-primary">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-google" viewBox="0 0 16 16">
-                            <path d="M15.545 6.558a9.42 9.42 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.689 7.689 0 0 1 5.352 2.082l-2.284 2.284A4.347 4.347 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.792 4.792 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.702 3.702 0 0 0 1.599-2.431H8v-3.08h7.545z"/>
-                          </svg> Đăng nhập bằng Google
-                    </button>
-                    </div>
-                    <hr>
-                    <div style="text-align: center;" class="mb-3">
-                        <a class="btn btn-link" (click)="gotoSingup()">Đăng ký tài khoản</a> | <a class="btn btn-link" (click)="gobackHomePage()">Trở về trang chủ</a>
-                    </div>
-                </form>
-            </div>
+<div style="text-align: center; color:#3399ff;">
+  <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-menu-button"
+       viewBox="0 0 16 16">
+    <path
+      d="M0 1.5A1.5 1.5 0 0 1 1.5 0h8A1.5 1.5 0 0 1 11 1.5v2A1.5 1.5 0 0 1 9.5 5h-8A1.5 1.5 0 0 1 0 3.5v-2zM1.5 1a.5.5 0 0 0-.5.5v2a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 .5-.5v-2a.5.5 0 0 0-.5-.5h-8z"/>
+    <path
+      d="M7.823 2.823l-.396-.396A.25.25 0 0 1 7.604 2h.792a.25.25 0 0 1 .177.427l-.396.396a.25.25 0 0 1-.354 0zM0 8a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V8zm1 3v2a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2H1zm14-1V8a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v2h14zM2 8.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0 4a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5z"/>
+  </svg>
+  <i style="font-size: 40px;"> SevenG </i></div>
+<br>
+<br>
+<div class="row justify-content-center">
+  <div class="card shadow-lg p-3 mb-5 bg-white rounded" style="width: 25rem; height: 35rem;">
+    <div class="card-body">
+      <form #login="ngForm">
+        <p
+          style="text-align: center; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
+          <b> Đăng nhập vào SevenG </b></p>
+        <br>
+        <br>
+        <div class="mb-3">
+          <mat-form-field class="example-full-width">
+            <input matInput [(ngModel)]="email" name="email" required email type="text" #emails='ngModel'
+                   [class.is-invalid]="emails.invalid && emails.touched" placeholder="Nhập email">
+          </mat-form-field>
+          <div *ngIf="emails.errors && (emails.valid || emails.touched)">
+            <small class="text-danger" *ngIf="emails.errors.required">Email không được để trống</small>
+            <small class="text-danger" *ngIf="emails.errors.email">Email phải nhập đúng định dạng</small>
+          </div>
         </div>
+        <div class="mb-3">
+          <mat-form-field class="example-full-width">
+            <input matInput [type]="hide ? 'password' : 'text'" placeholder="Nhập mật khẩu" [(ngModel)]="password"
+                   name="password" required pattern="[\w]+[\w]{5,}" type="password" #pass='ngModel'
+                   [class.is-invalid]="pass.invalid && pass.touched">
+            <a mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+               [attr.aria-pressed]="hide">
+              <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </a>
+          </mat-form-field>
+          <div *ngIf="pass.errors && (pass.valid || pass.touched)">
+            <small class="text-danger" *ngIf="pass.errors.required">Mật khẩu không được để trống</small>
+            <small class="text-danger" *ngIf="pass.errors.pattern">Mật khẩu phải hơn 6 ký tự và không được dùng ký tự
+              đặc biệt</small>
+          </div>
+        </div>
+        <div style="text-align: center;" class="mb-3">
+          <button type="submit" class="loginButton btn btn-success " [disabled]="login.form.invalid"
+                  (click)="getToken()">Đăng nhập
+          </button>
+        </div>
+        <p style="text-align: center;">Hoặc</p>
+        <div style="text-align: center;" class="mb-3">
+          <button class="loginButtonGoogle btn btn-outline-primary">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-google"
+                 viewBox="0 0 16 16">
+              <path
+                d="M15.545 6.558a9.42 9.42 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.689 7.689 0 0 1 5.352 2.082l-2.284 2.284A4.347 4.347 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.792 4.792 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.702 3.702 0 0 0 1.599-2.431H8v-3.08h7.545z"/>
+            </svg>
+            Đăng nhập bằng Google
+          </button>
+        </div>
+        <hr>
+        <div style="text-align: center;" class="mb-3">
+          <a class="btn btn-link" (click)="gotoSingup()">Đăng ký tài khoản</a> | <a class="btn btn-link"
+                                                                                    (click)="gobackHomePage()">Trở về
+          trang chủ</a>
+        </div>
+      </form>
     </div>
+  </div>
+</div>
 </body>
 
 </html>
