--- a/front-end/src/app/password/password.component.html
+++ b/front-end/src/app/password/password.component.html
@@ -2,70 +2,90 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <title>Title</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
 </head>
 
 <body>
-    <app-mynavbar></app-mynavbar>
-    <div id="page-body">
-        <div id="property">
-            <img class="mt-5" width="80%" src="https://a.trellocdn.com/prgb/dist/images/member-home/taco-privacy.ced1e262c59e0225e3aa.svg" />
-            <h1 class="mt-3">Đổi mật khẩu</h1>
-            <form style="width: 50%; left: 25%; position: relative" #pass="ngForm">
-                <div class="mb-3">
-                    <mat-form-field class="example-full-width">
-                        <input matInput [type]="hide ? 'password' : 'text'" type="password" [(ngModel)]="oldPassword" name="oldPass" required #oldPass="ngModel" [class.is-invalid]="oldPass.invalid && oldPass.touched" placeholder="Nhập mật khẩu cũ">
-                        <a mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                        </a>
-                    </mat-form-field>
-                    <div *ngIf="oldPass.errors && (oldPass.valid || oldPass.touched)">
-                        <small class="text-danger" *ngIf="oldPass.errors.required">Mật khẩu cũ không được để trống</small>
-                    </div>
-                </div>
-                <div class="mb-3">
-                    <mat-form-field class="example-full-width">
-                        <input matInput [type]="hide2 ? 'password' : 'text'" type="password" [(ngModel)]="newPassword" name="newPass" required pattern="[\w]+[\w]{5,}" #newPass="ngModel" [class.is-invalid]="newPass.invalid && newPass.touched" placeholder="Nhập mật khẩu mới">
-                        <a mat-icon-button matSuffix (click)="hide2 = !hide2" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                            <mat-icon>{{hide2 ? 'visibility_off' : 'visibility'}}</mat-icon>
-                        </a>
-                    </mat-form-field>
-                    <div *ngIf="newPass.errors && (newPass.valid || newPass.touched)">
-                        <small class="text-danger" *ngIf="newPass.errors.required">Mật khẩu mới không được để trống</small>
-                        <small class="text-danger" *ngIf="newPass.errors.pattern">Mật khẩu phải hơn 6 ký tự và không được dùng ký tự đặc biệt</small>
-                    </div>
-                </div>
-                <div class="mb-3">
-                    <mat-form-field class="example-full-width">
-                        <input matInput [type]="hide3 ? 'password' : 'text'" type="password" [(ngModel)]="newPasswordConfirm" name="passConfirm" required #newPassAgain="ngModel" [class.is-invalid]="newPassAgain.invalid && newPassAgain.touched" placeholder="Nhập lại mật khẩu mới">
-                        <a mat-icon-button matSuffix (click)="hide3 = !hide3" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                            <mat-icon>{{hide3 ? 'visibility_off' : 'visibility'}}</mat-icon>
-                        </a>
-                    </mat-form-field>
-                    <div *ngIf="newPassAgain.errors && (newPassAgain.valid || newPassAgain.touched)">
-                        <small class="text-danger" *ngIf="newPassAgain.errors.required">Mật khẩu mới không được để trống</small>
-                        <small class="text-danger" *ngIf="newPassAgain.errors.pattern">Mật khẩu phải hơn 6 ký tự và không được dùng ký tự đặc biệt</small>
-                    </div>
-                    <div *ngIf="newPassAgain.valid && newPassAgain.value != newPass.value">
-                        <small class="text-danger" *ngIf="newPassAgain.valid && newPassAgain.value != newPass.value">Mật khẩu không khớp </small>
-                    </div>
-                </div>
-                <button class="btn btn-success" (click)="updatePassword()" [disabled]="pass.form.invalid">Đổi mật khẩu</button>
-                <button class="btn btn-link" (click)="back()">Quay lại</button>
-            </form>
+<app-mynavbar></app-mynavbar>
+<div id="page-body">
+  <div id="property">
+    <img class="mt-5" width="80%"
+         src="https://a.trellocdn.com/prgb/dist/images/member-home/taco-privacy.ced1e262c59e0225e3aa.svg"/>
+    <h1 class="mt-3">Đổi mật khẩu</h1>
+    <form style="width: 50%; left: 25%; position: relative" #pass="ngForm">
+      <div class="mb-3">
+        <mat-form-field class="example-full-width">
+          <input matInput [type]="hide ? 'password' : 'text'" type="password" [(ngModel)]="oldPassword" name="oldPass"
+                 required #oldPass="ngModel" [class.is-invalid]="oldPass.invalid && oldPass.touched"
+                 placeholder="Nhập mật khẩu cũ">
+          <a mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+             [attr.aria-pressed]="hide">
+            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+          </a>
+        </mat-form-field>
+        <div *ngIf="oldPass.errors && (oldPass.valid || oldPass.touched)">
+          <small class="text-danger" *ngIf="oldPass.errors.required">Mật khẩu cũ không được để trống</small>
         </div>
-    </div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+      </div>
+      <div class="mb-3">
+        <mat-form-field class="example-full-width">
+          <input matInput [type]="hide2 ? 'password' : 'text'" type="password" [(ngModel)]="newPassword" name="newPass"
+                 required pattern="[\w]+[\w]{5,}" #newPass="ngModel"
+                 [class.is-invalid]="newPass.invalid && newPass.touched" placeholder="Nhập mật khẩu mới">
+          <a mat-icon-button matSuffix (click)="hide2 = !hide2" [attr.aria-label]="'Hide password'"
+             [attr.aria-pressed]="hide">
+            <mat-icon>{{hide2 ? 'visibility_off' : 'visibility'}}</mat-icon>
+          </a>
+        </mat-form-field>
+        <div *ngIf="newPass.errors && (newPass.valid || newPass.touched)">
+          <small class="text-danger" *ngIf="newPass.errors.required">Mật khẩu mới không được để trống</small>
+          <small class="text-danger" *ngIf="newPass.errors.pattern">Mật khẩu phải hơn 6 ký tự và không được dùng ký tự
+            đặc biệt</small>
+        </div>
+      </div>
+      <div class="mb-3">
+        <mat-form-field class="example-full-width">
+          <input matInput [type]="hide3 ? 'password' : 'text'" type="password" [(ngModel)]="newPasswordConfirm"
+                 name="passConfirm" required #newPassAgain="ngModel"
+                 [class.is-invalid]="newPassAgain.invalid && newPassAgain.touched" placeholder="Nhập lại mật khẩu mới">
+          <a mat-icon-button matSuffix (click)="hide3 = !hide3" [attr.aria-label]="'Hide password'"
+             [attr.aria-pressed]="hide">
+            <mat-icon>{{hide3 ? 'visibility_off' : 'visibility'}}</mat-icon>
+          </a>
+        </mat-form-field>
+        <div *ngIf="newPassAgain.errors && (newPassAgain.valid || newPassAgain.touched)">
+          <small class="text-danger" *ngIf="newPassAgain.errors.required">Mật khẩu mới không được để trống</small>
+          <small class="text-danger" *ngIf="newPassAgain.errors.pattern">Mật khẩu phải hơn 6 ký tự và không được dùng ký
+            tự đặc biệt</small>
+        </div>
+        <div *ngIf="newPassAgain.valid && newPassAgain.value != newPass.value">
+          <small class="text-danger" *ngIf="newPassAgain.valid && newPassAgain.value != newPass.value">Mật khẩu không
+            khớp </small>
+        </div>
+      </div>
+      <button class="btn btn-success" (click)="updatePassword()" [disabled]="pass.form.invalid">Đổi mật khẩu</button>
+      <button class="btn btn-link" (click)="back()">Quay lại</button>
+    </form>
+  </div>
+</div>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
